--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7.4",
+        "phpunit/phpunit": "^4.8||^5.7.4",
         "squizlabs/php_codesniffer": "^2.7"
     },
     "scripts": {
