--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,5 +1,6 @@
 build: false
 platform:
+  - x86
   - x64
 
 clone_folder: c:\projects\php-project-workspace
@@ -14,21 +15,9 @@ init:
 environment:
   matrix:
     - php_ver_target: 7.0
-      DEPS: 'low'
-    - php_ver_target: 7.0
-      DEPS: 'high'
     - php_ver_target: 7.1
-      DEPS: 'low'
-    - php_ver_target: 7.1
-      DEPS: 'high'
     - php_ver_target: 7.2
-      DEPS: 'low'
-    - php_ver_target: 7.2
-      DEPS: 'high'
     - php_ver_target: 7.3
-      DEPS: 'low'
-    - php_ver_target: 7.3
-      DEPS: 'high'
 
 cache:
   - '%LOCALAPPDATA%\Composer\files -> composer.lock'
@@ -50,20 +39,14 @@ install:
     - IF %PHP%==1 echo extension=php_openssl.dll >> php.ini
     - IF %PHP%==1 echo extension=php_mbstring.dll >> php.ini
     - IF %PHP%==1 echo extension=php_fileinfo.dll >> php.ini
-    - IF %PHP%==1 echo zend.assertions=1 >> php.ini
-    - IF %PHP%==1 echo assert.exception=On >> php.ini
-    - IF %PHP%==1 echo error_reporting=E_ALL >> php.ini
     - IF %PHP%==1 echo @php %%~dp0composer.phar %%* > composer.bat
     - appveyor-retry appveyor DownloadFile https://getcomposer.org/composer.phar
     - cd c:\projects\php-project-workspace
-    - php -r "phpinfo(INFO_GENERAL);"
-    - if NOT DEFINED APPVEYOR_REPO_TAG_NAME (set COMPOSER_ROOT_VERSION=dev-master)
-    - if %DEPS%==low appveyor-retry composer update --no-interaction --no-suggest --prefer-source --no-progress --profile --prefer-lowest --prefer-stable
-    - if %DEPS%==high appveyor-retry composer update --no-interaction --no-suggest --prefer-source --no-progress --profile
+    - appveyor-retry composer install --no-progress --profile
     - composer show
 
 ## Run the actual test
 test_script:
     - cd c:\projects\php-project-workspace
     - vendor/bin/phpunit
-    - php ./psalm --with-spirit
+    - ./psalm
