--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,6 +13,7 @@ init:
   - SET ANSICON=121x90 (121x90)
 
 environment:
+  COMPOSER_ROOT_VERSION: 'dev-master'
   matrix:
     - php_ver_target: 7.0
     - php_ver_target: 7.1
