--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,7 +13,6 @@ init:
   - SET ANSICON=121x90 (121x90)
 
 environment:
-  COMPOSER_ROOT_VERSION: 'dev-master'
   matrix:
     - php_ver_target: 7.0
       DEPS: 'low'
@@ -57,6 +56,7 @@ install:
     - IF %PHP%==1 echo @php %%~dp0composer.phar %%* > composer.bat
     - appveyor-retry appveyor DownloadFile https://getcomposer.org/composer.phar
     - cd c:\projects\php-project-workspace
+    - if NOT DEFINED APPVEYOR_REPO_TAG_NAME (set COMPOSER_ROOT_VERSION=dev-master)
     - if %DEPS%==low appveyor-retry composer update --no-interaction --no-suggest --prefer-source --no-progress --profile --prefer-lowest --prefer-stable
     - if %DEPS%==high appveyor-retry composer update --no-interaction --no-suggest --prefer-source --no-progress --profile
     - composer show
