--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -66,4 +66,4 @@ install:
 test_script:
     - cd c:\projects\php-project-workspace
     - vendor/bin/phpunit
-    - ./psalm --with-spirit
+    - php ./psalm --with-spirit
