--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -67,4 +67,4 @@ install:
 test_script:
     - cd c:\projects\php-project-workspace
     - vendor/bin/phpunit
-    - php ./psalm --with-spirit
+    - php ./psalm --shepherd
